# ChessEngine-Norm

./: CMakeLists.txt  ChessAI2.sln  ChessAI2.vcxproj  ChessAI2.vcxproj.filters  cerebrum.c  constant_bitboard.h  constant_eval.h  constant_hash.h  constant_search.h  main.cpp  ttable.h  types.h
Stockfish/src/: evaluate.cpp  evaluate.h  misc.cpp  position.h  types.h
Stockfish/src/nnue/: network.cpp  nnue_misc.cpp
Stockfish/src/nnue/layers/: affine_transform_sparse_input.h
include/: ChessAI.h  bitboard.h  chess_types.h  chessengine.h  constant_bitboard.h  constant_eval.h  constant_hash.h  constant_search.h  fancy_movegen.h  mybitboard.h  nnue.h  ttable.h  types.h  utils.h
src/: CMakeLists.txt  bitboard.cpp  chessengine.cpp  main.cpp  mybitboard.cpp  nnue.cpp
